# pipfile-upgrade

./: .codespellrc  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  Pipfile  README.md  __init__.py  pyproject.toml  setup.py
pipfile_upgrade/: __main__.py  argument_parser.py  dataclasses.py  errors.py  pipfile.py
src/: dataclasses.py  pipfile.py  tomlfile.py
test/: test_argument_parser.py
