[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.isort]
combine_as_imports = true
default_section = "THIRDPARTY"
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = "app"
line_length = 88
multi_line_output = 3
skip = ".git,__pycache,.venv,settings,.tox"
use_parentheses = true

[tool.black]
line_length = 120

[tool.mypy]
exclude = "migrations/env.py"
ignore_missing_imports = true
pretty = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true

[tool.pytest]
addopts = "-vvv"
testpaths = "tests"
